<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="entryUpsertViewModel"
            type="com.example.nought.entryupsert.EntryUpsertViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".entryupsert.EntryUpsertFragment">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submit_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/entry_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="40"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="8"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:autofillHints="New entry text"
            android:text="@{entryUpsertViewModel.entry.content}"
            android:hint="@string/entry_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>